fix games sub menu items spacing

--- a/stylesheets/mediaQ.scss
+++ b/stylesheets/mediaQ.scss
@@ -264,9 +264,7 @@
 
 		.main-nav-games-content {
 			.main-nav-games-item {
-				a {
-					width: 5.5rem;
-				}
+				margin-right: 0;
 			}
 		}
 	}
