--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -112,19 +112,23 @@ sup {
 			}
 		}
 
+		&-mobile {
+			display: none;
+		}
+
 		&-left,
 		&-right {
 			display: flex;
 			align-items: center;
 			height: 100%;
 
-			li {
+			.main-nav-item {
 				height: 100%;
 				display: flex;
 				align-items: center;
 				margin-right: 3rem;
 
-				a {
+				& > a {
 					display: flex;
 					align-items: center;
 					height: 100%;
@@ -150,10 +154,8 @@ sup {
 			width: 50%;
 			font-size: 2rem;
 
-			li {
-				a {
-					text-transform: uppercase;
-				}
+			.main-nav-item > a {
+				text-transform: uppercase;
 			}
 
 			#main-nav-logo {
@@ -316,15 +318,17 @@ sup {
 			align-items: center;
 			color: $light-color;
 			filter: brightness(80%);
+			font-size: 1.5rem;
 
 			#main-nav-battlenet-logo {
 				width: 2rem;
-				margin-right: 0.2rem;
+				margin-right: 0.5rem;
 			}
 
 			i {
-				margin-right: 0.5rem;
+				margin-right: 0.75rem;
 				color: $primary-color;
+				font-size: 1.8rem;
 			}
 
 			&:hover {
@@ -409,10 +413,12 @@ sup {
 		a {
 			color: $light-color;
 			filter: brightness(80%);
+			font-size: 1.5rem;
 
 			i {
 				color: $primary-color;
 				margin-right: 0.5rem;
+				font-size: 1.8rem;
 			}
 
 			&:hover {
@@ -644,6 +650,7 @@ sup {
 	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	top: 4.8rem;
+	left: 0;
 	width: 100vw;
 	bottom: 0;
 	z-index: 8;
